Fix body overflow
This is an issue on Windows + Chrome where scrollbars show (not seen with macOS)

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -38,6 +38,7 @@ body {
     font-family: "Helvetica Neue", Roboto, Helvetica, sans-serif;
     font-weight: 100;
     font-size: 1.5vw;
+    overflow: hidden;
 }
 
 h2 {
